- New Link/Multilink property attribute 'msg_header_property', can be
  used to configure additional headers in outgoing emails. See
  documentation in ``doc/customizing.txt``. (Ralf Schlatterbeck)
- Allow multiple file uploads: If the html template specifies
  multiple="multiple" for a file upload the user can attach multiple
  files and the form parser now handles this. (Ralf Schlatterbeck)

Fixed:

- issue1615201: Optionally restore the original (version 0.6) mailgw 
  behaviour of ignoring a Resent-From:-header and using the real 
  From-header instead: new configuration option EMAIL_KEEP_REAL_FROM 
  (Peter Funk aka Pefu).
- issue2550717: Changed a couple of residual email references into
  E-Mail in German translation (John Rouillard)
- issue2550669: Adding documentation for csv_field_size to the
  customizing tracker section of doc/customizing.txt (John Rouillard)
- issue2550601: gsoc-2009 "bug" class doesn't have "patches" property
  Added multilink to patches to the bug schema in the devel template.
  (applied by John Rouillard)
- issue2550748: Crash when creating new issues with non-existing
  multilink values (in classic template). Applied patch so it
  now errors the same way as an update does. (applied by John Rouillard)
- issue2550757: one bug raised by issue fixed. Patch created by
  W. Trevor King (wking) for documentation of mailgw applied by 
  John Rouillard.
- Fix processing of additional arguments to cgi method 'menu': This
  would not work if more than one additional argument is used.
  (Ralf Schlatterbeck)
- Update documentation of some existing property attributes (like
  'do_journal' for Link/Multilink properties), this also adds missing
  documentation for issue1444214. (Ralf Schlatterbeck)

2016-01-11: 1.5.1

Pay attention:

  If you have installed an intermediate version from our version control
  system and have modified your tracker instance to escape OK and
  error-messages in the HTML templates you need to revert this change.