@@ -107,9 +107,10 @@ class FormTestCase(unittest.TestCase):
 
         test = self.instance.backend.Class(self.db, "test",
             string=hyperdb.String(), number=hyperdb.Number(),
-            boolean=hyperdb.Boolean(), link=hyperdb.Link('test'),
-            multilink=hyperdb.Multilink('test'), date=hyperdb.Date(),
-            messages=hyperdb.Multilink('msg'), interval=hyperdb.Interval())
+            intval=hyperdb.Integer(), boolean=hyperdb.Boolean(),
+            link=hyperdb.Link('test'), multilink=hyperdb.Multilink('test'),
+            date=hyperdb.Date(), messages=hyperdb.Multilink('msg'),
+            interval=hyperdb.Interval())
 
         # compile the labels re
         classes = '|'.join(self.db.classes.keys())
@@ -621,6 +622,62 @@ class FormTestCase(unittest.TestCase):
             self.parseForm({'number': '0', ':required': 'number'})
         except FormError:
             self.fail('number "no" raised "required missing"')
+
+    #
+    # Integer
+    #
+    def testEmptyInteger(self):
+        self.assertEqual(self.parseForm({'intval': ''}),
+            ({('test', None): {}}, []))
+        self.assertEqual(self.parseForm({'intval': ' '}),
+            ({('test', None): {}}, []))
+        self.assertRaises(FormError, self.parseForm, {'intval': ['', '']})
+
+    def testInvalidInteger(self):
+        self.assertRaises(FormError, self.parseForm, {'intval': 'hi, mum!'})
+
+    def testSetInteger(self):
+        self.assertEqual(self.parseForm({'intval': '1'}),
+            ({('test', None): {'intval': 1}}, []))
+        self.assertEqual(self.parseForm({'intval': '0'}),
+            ({('test', None): {'intval': 0}}, []))
+        self.assertEqual(self.parseForm({'intval': '\n0\n'}),
+            ({('test', None): {'intval': 0}}, []))
+
+    def testSetIntegerReplaceOne(self):
+        nodeid = self.db.test.create(intval=1)
+        self.assertEqual(self.parseForm({'intval': '1'}, 'test', nodeid),
+            ({('test', nodeid): {}}, []))
+        self.assertEqual(self.parseForm({'intval': '0'}, 'test', nodeid),
+            ({('test', nodeid): {'intval': 0}}, []))
+
+    def testSetIntegerReplaceZero(self):
+        nodeid = self.db.test.create(intval=0)
+        self.assertEqual(self.parseForm({'intval': '0'}, 'test', nodeid),
+            ({('test', nodeid): {}}, []))
+
+    def testSetIntegerReplaceNone(self):
+        nodeid = self.db.test.create()
+        self.assertEqual(self.parseForm({'intval': '0'}, 'test', nodeid),
+            ({('test', nodeid): {'intval': 0}}, []))
+        self.assertEqual(self.parseForm({'intval': '1'}, 'test', nodeid),
+            ({('test', nodeid): {'intval': 1}}, []))
+
+    def testEmptyIntegerSet(self):
+        nodeid = self.db.test.create(intval=0)
+        self.assertEqual(self.parseForm({'intval': ''}, 'test', nodeid),
+            ({('test', nodeid): {'intval': None}}, []))
+        nodeid = self.db.test.create(intval=1)
+        self.assertEqual(self.parseForm({'intval': ' '}, 'test', nodeid),
+            ({('test', nodeid): {'intval': None}}, []))
+
+    def testRequiredInteger(self):
+        self.assertRaises(FormError, self.parseForm, {'intval': '',
+            ':required': 'intval'})
+        try:
+            self.parseForm({'intval': '0', ':required': 'intval'})
+        except FormError:
+            self.fail('intval "no" raised "required missing"')
 
     #
     # Date
